# LandmarkTriangulation

./: .gitignore  CHANGELOG.md  CHANGELOG.rst  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  test.yml
examples/: DimReductionExample.ipynb  t-SNE Benchmark.ipynb  tsne_benchmark.ipynb
examples/.ipynb_checkpoints/: t-SNE Benchmark-checkpoint.ipynb
scripts/: DataGeneration.py
src/landmark_triangulation/: __init__.py  _version.py  core.py  verify.py
tests/: conftest.py  test_core.py  test_numerical_stability.py  test_performance.py  test_regression.py  test_sklearn_compatibility.py
tests/fixtures/: generate_golden_outputs.py
tests/fixtures/golden/: hybrid_mode_2d.npy  input_data.npy  random_mode_2d.npy  random_mode_3d.npy  synthetic_mode_2d.npy
