[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "landmark-triangulation"          
version = "1.0.0"                        
description = "Sine Landmark Reduction (LandmarkTriangulation) for fast dimensionality reduction"
readme = "README.md"
requires-python = ">=3.8"

# Minimal 
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
]

[project.optional-dependencies]
examples = [
    "scikit-learn",
    "jupyter",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
