[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "landmark-triangulation"
version = "1.1.0"
description = "Landmark-based dimensionality reduction using triangulation"
authors = [
    { name = "Thingbook.io", email = "roman.f@thingbook.io" },
    { name = "landmark-triangulation contributors" }
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["dimensionality-reduction", "machine-learning", "scikit-learn"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.20.0",
    "scikit-learn>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "pre-commit>=3.0.0",
]

[project.optional-dependencies]
examples = [
    "matplotlib>=3.3.0",
    "pandas>=1.2.0",
    "jupyterlab>=4.3.8",
]

[project.urls]
Repository = "https://github.com/thngbk/LandmarkTriangulation"

[tool.hatch.build.targets.wheel]
packages = ["src/landmark_triangulation"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "PYI", "TID"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["landmark_triangulation"]
combine-as-imports = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
addopts = [
    "--cov=landmark_triangulation",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=90",
    "--strict-markers",
]

[tool.uv]
environments = [
    "sys_platform == 'win32'",
    "sys_platform == 'linux'",
]
